--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,7 +52,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 
 
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
 
 # Apply Config 3 of catppuccin
 set -g @catppuccin_window_left_separator ""
