--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,24 +1,22 @@
-# Color
+# Set the terminal to 256 colors
 set -g default-terminal "screen-256color"
 
-# Change default prefix
+# Change default prefix to ctrl-a
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-# Change default key to split horizontal window
+# Change default key bindings for splitting windows
 unbind %
 bind w split-window -h  
-
-# Change default key to split Vertical window
 unbind '"'
 bind-key s split-window -v 
 
-# Bind r to source .tmux.conf
+# Bind r to source the tmux configuration file
 unbind r
 bind r source-file ~/.tmux.conf
 
-# Set keys to change window pane
+# Set keys to resize pane
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
@@ -27,21 +25,24 @@ bind -r h resize-pane -L 5
 # Position tmux status bar at top of screen
 set-option -g status-position top
 
+# Bind m to toggle zoom for the active pane
 bind -r m resize-pane -Z
 
+# Enable mose support
 set -g mouse on
 
+# Use vi keys in copy mode
 set-window-option -g mode-keys vi
 
+# Bind vi keys for copy mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
-# remove delay for exiting insert mode with ESC in Neovim
+# Reduce delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
 
-# tpm plugin
+# tpm plugin manager setup
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
@@ -50,11 +51,11 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
-
+# Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'off'
+set -g @continuum-restore 'on'
 
-# Apply Config 3 of catppuccin
+# Apply Catppuccin theme configuartions
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
