Made some tweaks in i3 config tmux config and vim config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
+#  __
+# |  |_.--------.--.--.--.--.
+# |   _|        |  |  |_   _|
+# |____|__|__|__|_____|__.__|
+#
+
 # Set the terminal to 256 colors
 set -g default-terminal "screen-256color"
 
@@ -67,13 +73,13 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_modules_right "user host session"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+#set -g @catppuccin_directory_text "#{pane_current_path}"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+#Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
