feat: update .zshrc, i3, kitty, and polybar configurations
- .zshrc:
  - Disable instant prompt output warning with `POWERLEVEL9K_INSTANT_PROMPT=quiet`
  - Add new alias `aq` for `asciiquarium`
  - Add aliases for `sl`, `pipes.sh`, and `cbonsai`

- i3:
  - Adjust window border to pixel 3
  - Comment out unused background and keyboard layout settings
  - Start `variety` on startup
  - Increase inner and outer gaps
  - Add custom window title icons and padding
  - Configure audio, brightness, keyboard backlight, microphone, and screenshot key bindings
  - Add lockscreen and compositor commands

- kitty:
  - Change font size to 17 and background opacity to 0.60
  - Confirm window close setting updated
  - Switch theme to "Catppuccin Mocha"

- polybar:
  - Switch bar position to top
  - Adjust font size to 14
  - Remove Bluetooth module
  - Update date format

--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,56 +1,78 @@
-## name: Rosé Pine
-## author: mvllow
-## license: MIT
-## upstream: https://github.com/rose-pine/kitty/blob/main/dist/rose-pine.conf
-## blurb: All natural pine, faux fur and a bit of soho vibes for the classy minimalist
+## name:     Catppuccin Mocha 🌿
+## author:   Pocco81 (https://github.com/Pocco81)
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
-foreground               #e0def4
-background               #191724
-selection_foreground     #e0def4
-selection_background     #403d52
 
-cursor                   #524f67
-cursor_text_color        #e0def4
 
-url_color                #c4a7e7
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
-active_tab_foreground    #e0def4
-active_tab_background    #26233a
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #191724
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
 
-active_border_color      #31748f
-inactive_border_color    #403d52
+# URL underline color when hovering with mouse
+url_color               #B4BEFE
+
+# Kitty window border colors
+active_border_color     #CBA6F7
+inactive_border_color   #8E95B3
+bell_border_color       #EBA0AC
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #87B0F9
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
+
+# The 16 terminal colors
 
 # black
-color0   #26233a
-color8   #6e6a86
+color0 #43465A
+color8 #43465A
 
 # red
-color1   #eb6f92
-color9   #eb6f92
+color1 #F38BA8
+color9 #F38BA8
 
 # green
-color2   #31748f
-color10  #31748f
+color2  #A6E3A1
+color10 #A6E3A1
 
 # yellow
-color3   #f6c177
-color11  #f6c177
+color3  #F9E2AF
+color11 #F9E2AF
 
 # blue
-color4   #9ccfd8
-color12  #9ccfd8
+color4  #87B0F9
+color12 #87B0F9
 
 # magenta
-color5   #c4a7e7
-color13  #c4a7e7
+color5  #F5C2E7
+color13 #F5C2E7
 
 # cyan
-color6   #ebbcba
-color14  #ebbcba
+color6  #94E2D5
+color14 #94E2D5
 
 # white
-color7   #e0def4
-color15  #e0def4
-
+color7  #CDD6F4
+color15 #A1A8C9
