--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -65,7 +65,8 @@ radius = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = true
+#bottom = true
+top = true
 
 line-size = 6pt
 
@@ -80,7 +81,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.flamingo}
 
-font-0 = MesloLGS Nerd Font Mono:size=22;6
+font-0 = MesloLGS Nerd Font Mono:size=14;6
 
 modules-left = xworkspaces xwindow
 modules-right = pulseaudio battery memory cpu wlan date
@@ -175,17 +176,6 @@ format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-[module/bluetooth]
-type = custom/script
-exec = bluetoothctl show | awk '/Powered/ {print $2}'
-interval = 10
-label = Bluetooth: %output%
-label-foreground = ${colors.primary}
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-connected = %{F#F0C674}Connected
-label-disconnected = %{F#707880}Disconnected
-
 [module/battery]
 type = internal/battery
 format-prefix = "BAT "
@@ -232,8 +222,8 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %Y-%m-%d %I:%M:%S %p
+date-alt = %I:%M %p
 
 label = %date%
 label-foreground = ${colors.primary}
