--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -17,28 +17,6 @@
             "format": "┌──────────────────────────────────────────┐"
         },
         {
-            "type": "host",
-            "key": "    Host",
-            "keyColor": "red"
-        },
-        {
-            "type": "uptime",
-            "key": "    Uptime",
-            "keyColor": "magenta"
-        },
-        {
-            "type": "custom",
-            "format": "└──────────────────────────────────────────┘"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[36m    コンピューター"
-        },
-        {
-            "type": "custom",
-            "format": "┌──────────────────────────────────────────┐"
-        },
-        {
             "type": "os",
             "key": "   OS",
             "keyColor": "red"
@@ -103,6 +81,31 @@
             "type": "memory",
             "key": "  ﬙ Memory",
             "keyColor": "magenta"
+        },
+        {
+            "type": "custom",
+            "format": "└──────────────────────────────────────────┘"
+        },
+        "break",
+        {
+            "type": "custom",
+            "format": "┌──────────────────────────────────────────┐"
+        },
+        {
+            "type": "host",
+            "key": "   Host",
+            "keyColor": "green"
+        },
+        {
+            "type": "command",
+            "key": "  󱦟 OS Age ",
+            "keyColor": "31",
+            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+        },
+        {
+            "type": "uptime",
+            "key": "  󱫐 Uptime ",
+            "keyColor": "red"
         },
         {
             "type": "custom",
