--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,5 @@
-font_family      MesloLGS Nerd Font Mono
+#font_family      MesloLGS Nerd Font Mono
+font_family      JetbrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -9,3 +10,9 @@ include theme.conf
 background_opacity 0.60
 hide_window_decorations yes
 confirm_os_window_close 0
+
+
+# BEGIN_KITTY_THEME
+# Tokyo Night
+include current-theme.conf
+# END_KITTY_THEME
