--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,8 +1,27 @@
 backend = "glx";
 vsync = true;
 glx-use-copysubbuffer-mesa = true;
-
 glx-copy-from-front = true;
 glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
+
+# Enable experimental backends
+experimental-backends = true;
+
+# Enable blur
+blur-method = "box";
+blur-strength = 10;
+
+# corners
+corner-radius = 10;
+
+# Exclude certain windows from blur (adjust class_g to match your terminal if necessary)
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
+# Transparency for inactive windows (optional)
+inactive-opacity = 0.9;
