--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -6,9 +6,6 @@ glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
 
-# Enable experimental backends
-experimental-backends = true;
-
 # Enable blur
 blur-method = "box";
 blur-strength = 10;
@@ -16,12 +13,22 @@ blur-strength = 10;
 # corners
 corner-radius = 10;
 
-# Exclude certain windows from blur (adjust class_g to match your terminal if necessary)
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
+# shadow
+shadow = true;
+shadow-radius = 8;
+shadow-opacity = 0.6;
+shadow-offset-x = -3;
+shadow-offset-y = -3;
+
+# shadow-exclude = []
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "class_g = 'slop'",
+  "class_g = 'Polybar'",
+  "class_g = 'trayer'",
+  "override_redirect = true",
   "_GTK_FRAME_EXTENTS@:c"
 ];
-
-# Transparency for inactive windows (optional)
-inactive-opacity = 0.9;
