--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,6 @@
 # i3 config file (v4)
 
-for_window [class="^.*"] border pixel 4
+# for_window [class="^.*"] border pixel 4
 
 # set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod4
@@ -14,15 +14,6 @@ exec --no-startup-id variety
 # kill any hanging polybar processes
 exec_always killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
-
-bindsym Print exec maim "/home/$USER/Pictures/$(date).jpg"
-bindsym $mod+Print exec maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date).jpg"
-bindsym Shift+Print exec maim --select "/home/$USER/Pictures/$(date).jpg"
-
-## Clipboard Screenshots
-bindsym Ctrl+Print exec maim | xclip -selection clipboard -t image/png
-bindsym Ctrl+$mod+Print exec maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
-bindsym Ctrl+Shift+Print exec maim --select | xclip -selection clipboard -t image/png
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -112,15 +103,12 @@ bindsym F3 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym F4 exec --no-startup-id brightnessctl set 10%-
 bindsym F5 exec --no-startup-id brightnessctl set +10%
 
-# Keyboard backlight toggle (example, may vary based on your hardware)
-bindsym F7 exec --no-startup-id ~/bin/toggle_kbd_backlight.sh
-
 # Microphone mute/unmute
 bindsym F9 exec --no-startup-id amixer set Capture toggle
 
 # Screenshot
-bindsym F12 exec gnome-screenshot -f ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-bindsym Shift+F12 exec gnome-screenshot -w -f ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
+bindsym F12 exec scrot  ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
+bindsym Shift+F12 exec scrot -u ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
 
 # split orientation
 bindsym $mod+z split h;exec notify-send 'tile horizontally'
@@ -206,9 +194,6 @@ bindsym $mod+r mode "resize"
 
 #Lockscript
 bindsym $mod+c exec "~/.config/i3/lockscreen.sh"
-
-#Compositor
-exec_always picom --corner-radius 10 -f -D 5
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
