--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -6,29 +6,32 @@ glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
 
-# Enable blur
-blur-method = "box";
-blur-strength = 10;
-
 # corners
+rounded-corners = true;
 corner-radius = 10;
 
-# shadow
-shadow = true;
-shadow-radius = 8;
-shadow-opacity = 0.6;
-shadow-offset-x = -3;
-shadow-offset-y = -3;
-
-# shadow-exclude = []
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "class_g = 'slop'",
-  "class_g = 'Polybar'",
-  "class_g = 'trayer'",
-  "override_redirect = true",
-  "_GTK_FRAME_EXTENTS@:c"
+# Exclude specific windows from rounded corners (optional)
+rounded-corners-exclude = [
+  "class_g = 'i3-frame'",
+  "class_g = 'Polybar'"
 ];
+
+# Enable shadows
+blur-method = "dual_kawase";
+blur-strength = 3;
+blur-background-exclude = [
+    "window_type = 'Polybar'",
+    "window_type = 'desktop'"
+];
+detect-rounded-corners = true;
+
+# Enable shadows
+shadow = true;
+shadow-radius = 10;
+shadow-offset-x = -4;
+shadow-offset-y = -4;
+shadow-opacity = 0.8;
+
+shadow-exclude = [
+"class_g =  'Polybar'"
+]
