add i3lock config modified alias in zshrc

--- a/i3/config
+++ b/i3/config
@@ -20,8 +20,9 @@ exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 font pango:JetbrainsMono Nerd Font Bold 11
 
 # Gaps
-gaps outer 5
-gaps inner 12
+gaps outer 8
+gaps inner 16
+gaps top -5
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -48,6 +49,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec kitty
+
 
 # kill focused window
 bindsym $mod+q kill
@@ -226,8 +228,8 @@ set $mantle    #181825
 set $crust     #11111b
 
 # target                 title     bg    text      indicator    border
-client.focused           $mantle   $mauve $mantle  $rosewater $mauve
-client.focused_inactive  $overlay0 $base  $text    $rosewater $overlay0
+client.focused           $mantle   $mauve $mantle  $mauve     $mauve
+client.focused_inactive  $overlay0 $base  $text    $mauve     $overlay0
 client.unfocused         $overlay0 $base  $text    $rosewater $overlay0
 client.urgent            $peach    $base  $peach   $overlay0  $peach
 client.placeholder       $overlay0 $base  $text    $overlay0  $overlay0
