--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,14 +1,14 @@
 backend = "glx";
 vsync = true;
 glx-use-copysubbuffer-mesa = true;
-glx-copy-from-front = true;
-glx-swap-method = 2;
+# glx-copy-from-front = true;
+# glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
 
 # corners
 rounded-corners = true;
-corner-radius = 10;
+corner-radius = 12;
 
 # Exclude specific windows from rounded corners (optional)
 rounded-corners-exclude = [
@@ -18,7 +18,7 @@ rounded-corners-exclude = [
 
 # Enable shadows
 blur-method = "dual_kawase";
-blur-strength = 3;
+blur-strength = 8;
 blur-background-exclude = [
     "window_type = 'Polybar'",
     "window_type = 'desktop'"
@@ -28,9 +28,9 @@ detect-rounded-corners = true;
 # Enable shadows
 shadow = true;
 shadow-radius = 10;
-shadow-offset-x = -4;
-shadow-offset-y = -4;
-shadow-opacity = 0.8;
+shadow-offset-x = 2;
+shadow-offset-y = 2;
+shadow-opacity = 0.75;
 
 shadow-exclude = [
 "class_g =  'Polybar'"
