--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -222,7 +222,8 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %d-%m-%Y %I:%M %p
+date = %a %d-%b %y  %I:%M %p
+; date = %A %d-%m-%Y %I:%M %p
 date-alt = %I:%M %p
 
 label = %date%
