--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,7 +8,7 @@ xrender-sync-fence = true;
 
 # corners
 rounded-corners = true;
-corner-radius = 12;
+corner-radius = 16;
 
 # Exclude specific windows from rounded corners (optional)
 rounded-corners-exclude = [
@@ -18,20 +18,31 @@ rounded-corners-exclude = [
 
 # Enable shadows
 blur-method = "dual_kawase";
-blur-strength = 8;
+blur-size = 12;
+blur-strength = 6;
+blur-background = true;
+blur-background-frame = false;
+blur-kern = "3x3box";
 blur-background-exclude = [
     "window_type = 'Polybar'",
-    "window_type = 'desktop'"
+    "window_type = 'desktop'",
+    "window_type = 'dock'",
 ];
 detect-rounded-corners = true;
 
 # Enable shadows
 shadow = true;
-shadow-radius = 10;
+shadow-radius = 12;
 shadow-offset-x = 2;
 shadow-offset-y = 2;
-shadow-opacity = 0.75;
+shadow-opacity = 0.60;
+shadow-color = "#111111"
 
 shadow-exclude = [
 "class_g =  'Polybar'"
 ]
+
+# Opacity
+inactive-opacity = 0.8;
+active-opacity = 0.9;
+
