--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,97 +1,103 @@
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-        "source": "$(find \"${XDG_CONFIG_HOME:-$HOME/.config}/fastfetch/pngs/\" -name \"*.png\" | sort -R | head -1)",
-        "height": 22
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "source":"$HOME/.config/fastfetch/ArchLogo.txt",
+    "type": "file",
+    "color": {
+      "1": "white",
+      "2": "red",
+      "3": "38;2;23;147;209"
+    }
+  },
+  "display": {
+    "separator": " : "
+  },
+  "modules": [
+    {
+      "type": "title",
+      "key": "  "
     },
-    "display": {
-        "separator": " : "
+    {
+      "type": "custom",
+      "format": "┌──────────────────────────────────────────┐"
     },
-    "modules": [
-        {
-            "type": "title",
-            "key": "  "
-        },
-        "break",
-        {
-            "type": "host",
-            "key": "   Host",
-            "keyColor": "red"
-        },
-        {
-            "type": "display",
-            "key": "   Display",
-            "keyColor": "green"
-        },
-        "break",
-        {
-            "type": "os",
-            "key": "   OS",
-            "keyColor": "red"
-        },
-        {
-            "type": "kernel",
-            "key": "   Kernel",
-            "keyColor": "red"
-        },
-        {
-            "type": "packages",
-            "key": "   Packages",
-            "keyColor": "green"
-        },
-        "break",
-        {
-            "type": "wm",
-            "key": "   WM",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "terminal",
-            "key": "   Terminal",
-            "keyColor": "yellow"
-        },
-        "break",
-        {
-            "type": "cpu",
-            "format": "{1}",
-            "key": "   CPU",
-            "keyColor": "blue"
-        },
-        {
-            "type": "gpu",
-            "format": "{2}",
-            "key": "   GPU",
-            "keyColor": "blue"
-        },
-        {
-            "type": "gpu",
-            "format": "{3}",
-            "key": "   GPU Driver",
-            "keyColor": "magenta"
-        },
-        {
-            "type": "memory",
-            "key": "  ﬙ Memory",
-            "keyColor": "magenta"
-        },
-        "break",
-        {
-            "type": "command",
-            "key": "  󱦟 OS Age ",
-            "keyColor": "31",
-            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
-        },
-        {
-            "type": "uptime",
-            "key": "  󱫐 Uptime ",
-            "keyColor": "red"
-        },
-        "break",
-        {
-            "type": "colors",
-            "paddingLeft": 2,
-            "symbol": "circle"
-        },
-        "break"
+    {
+      "type": "os",
+      "key": "  ",
+      "keyColor": "red"
+    },
+    {
+      "type": "kernel",
+      "key": "  ",
+      "keyColor": "red"
+    },
+    {
+      "type": "packages",
+      "key": " ",
+      "keyColor": "green"
+    },
+    {
+      "type": "display",
+      "key": " ",
+      "keyColor": "green"
+    },
+    {
+      "type": "wm",
+      "key": " ",
+      "keyColor": "yellow"
+    },
+    {
+      "type": "terminal",
+      "key": "  ",
+      "keyColor": "yellow"
+    },
+    "break",
+    {
+      "type": "cpu",
+      "format": "{1}",
+      "key": " ",
+      "keyColor": "blue"
+    },
+    {
+      "type": "gpu",
+      "format": "{2}",
+      "key": " ",
+      "keyColor": "blue"
+    },
+    {
+      "type": "gpu",
+      "format": "{3}",
+      "key": " ",
+      "keyColor": "magenta"
+    },
+    {
+      "type": "memory",
+      "key": "﬙ ",
+      "keyColor": "magenta"
+    },      
+    "break",
+    {
+      "type": "command",
+      "key": "󱦟 ",
+      "keyColor": "31",
+      "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+    },
+    {
+      "type": "uptime",
+      "key": "󱫐 ",
+      "keyColor": "red"
+    },
+    {
+      "type": "custom",
+      "format": "└──────────────────────────────────────────┘"
+    },
+    "break",
+    {
+      "type": "colors",
+      "paddingLeft": 2,
+      "symbol": "circle"
+    },
+    "break"
+
     ]
 }
