added new polybar config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,32 +1,3 @@
-[colors]
-base = #1e1e2e
-mantle = #181825
-crust = #11111b
-text = #cdd6f4
-subtext0 = #a6adc8
-subtext1 = #bac2de
-surface0 = #313244
-surface1 = #45475a
-surface2 = #585b70
-overlay0 = #6c7086
-overlay1 = #7f849c
-overlay2 = #9399b2
-blue = #89b4fa
-lavender = #b4befe
-sapphire = #74c7ec
-sky = #89dceb
-teal = #94e2d5
-green = #a6e3a1
-yellow = #f9e2af
-peach = #fab387
-maroon = #eba0ac
-red = #f38ba8
-mauve = #cba6f7
-pink = #f5c2e7
-flamingo = #f2cdcd
-rosewater = #f5e0dc
-transparent = #FF00000
-
 ;==========================================================
 ;
 ;
@@ -46,31 +17,30 @@ transparent = #FF00000
 ;==========================================================
 
 [colors]
-background = ${colors.base}
-background-alt = ${colors.blue}
-foreground = ${colors.text}
-primary = ${colors.mauve}
-secondary = ${colors.mantle}
-alert = ${colors.red}
-disabled = ${colors.subtext1}
+background = #99000000
+background-alt = #373B41
+foreground = #ffffff
+primary = #00aaff
+secondary = #4c7899
+alert = #A54242
+disabled = #707880
+transparent = #FF00000
 
 [bar/toph]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 28pt
+height = 22pt
 radius = 0
 
-; dpi = 96
+dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-#bottom = true
 top = true
 
-line-size = 6pt
+line-size = 0pt
 
-#border-size = 4pt
 border-color = #00000000
 
 padding-left = 0
@@ -79,12 +49,12 @@ padding-right = 1
 module-margin = 1
 
 separator = |
-separator-foreground = ${colors.flamingo}
+separator-foreground = ${colors.disabled}
 
-font-0 = MesloLGS Nerd Font Mono:size=14;6
+font-0 = JetbrainsMono Nerd Font :size=14;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
+modules-right = cpu memory battery brightness pulseaudio  wlan eth bluetooth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -107,9 +77,8 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.mauve}
-label-active-foreground = ${colors.crust}
-label-active-underline= ${colors.lauve}
+label-active-background = ${colors.background-alt}
+label-active-underline= ${colors.primary}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -141,7 +110,7 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = "  "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
@@ -165,14 +134,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = "󰍛 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -187,9 +156,8 @@ animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-; Framerate in milliseconds
 animation-charging-framerate = 750
-animation-charging-foreground = ${colors.peach}
+animation-charging-foreground = #F0C674
 format-discharging = <ramp-capacity> <label-discharging>
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -223,11 +191,32 @@ type = internal/date
 interval = 1
 
 date = %a %d-%b %y  %I:%M %p
-; date = %A %d-%m-%Y %I:%M %p
 date-alt = %I:%M %p
 
 label = %date%
-label-foreground = ${colors.primary}
+label-foreground = #F0C674
+
+[module/brightness]
+type = internal/backlight
+card = intel_backlight
+use-actual-brightness = true
+poll-interval = 0
+interval = 1
+enable-scroll = true
+scroll-interval = 10
+format-prefix = "󰃠 "
+format-prefix-foreground = ${colors.primary}
+label = %percentage%%
+
+[module/bluetooth]
+type = custom/script
+exec = bluetoothctl show | grep -q "Powered: yes" && echo " $(bluetoothctl info | grep 'Device' | cut -d ' ' -f 2-)" || echo "󰂲 Off"
+interval = 10
+format-foreground = ${colors.foreground}
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+label = %output%
+
 
 [settings]
 screenchange-reload = true
