--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,15 +8,17 @@ xrender-sync-fence = true;
 
 # corners
 rounded-corners = true;
-corner-radius = 16;
+corner-radius = 14;
 
 # Exclude specific windows from rounded corners (optional)
 rounded-corners-exclude = [
   "class_g = 'i3-frame'",
-  "class_g = 'Polybar'"
+  "class_g = 'Polybar'",
 ];
 
-# Enable shadows
+detect-rounded-corners = true;
+
+# Blur
 blur-method = "dual_kawase";
 blur-size = 12;
 blur-strength = 6;
@@ -24,19 +26,18 @@ blur-background = true;
 blur-background-frame = false;
 blur-kern = "3x3box";
 blur-background-exclude = [
-    "window_type = 'Polybar'",
-    "window_type = 'desktop'",
-    "window_type = 'dock'",
+  "window_type = 'Polybar'",
+  "window_type = 'desktop'",
+  "window_type = 'dock'",
+  "role = 'xborder'",
 ];
-detect-rounded-corners = true;
 
 # Enable shadows
 shadow = true;
-shadow-radius = 12;
-shadow-offset-x = 2;
-shadow-offset-y = 2;
-shadow-opacity = 0.60;
-shadow-color = "#111111"
+shadow-radius = 15;
+shadow-offset-x = 10;
+shadow-offset-y = 10;
+shadow-opacity = 0.6;
 
 shadow-exclude = [
 "class_g =  'Polybar'"
@@ -46,3 +47,86 @@ shadow-exclude = [
 inactive-opacity = 0.8;
 active-opacity = 0.9;
 
+# Fading
+fading = true;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
+fade-delta = 10;
+fade-time = 200;
+fade-duration = 200;
+
+use-damage = true;
+detect-client-opacity = true;
+
+# Animation 
+animations = (
+  {
+    triggers = ["close", "hide"];
+    opacity = {
+      curve = "cubic-bezier(0,1,1,1)";
+      duration = 0.15;
+      start = "window-raw-opacity-before";
+      end = 0;
+    };
+    blur-opacity = "opacity";
+    shadow-opacity = "opacity";
+    scale-x = 1;
+    scale-y = 1;
+  },
+  {
+    triggers = ["open", "show"];
+    opacity = {
+      curve = "cubic-bezier(0,1,1,1)";
+      duration = 0.25;
+      start = 0;
+      end = "window-raw-opacity";
+    };
+    blur-opacity = "opacity";
+    shadow-opacity = "opacity";
+    offset-x = "(1 - scale-x) / 2 * window-width";
+    offset-y = "(1 - scale-y) / 2 * window-height";
+    scale-x = {
+      curve = "cubic-bezier(0,1.2,1,1)";
+      duration = 0.25;
+      start = 0.8;
+      end = 1;
+    };
+    scale-y = "scale-x";
+    shadow-scale-x = "scale-x";
+    shadow-scale-y = "scale-y";
+    shadow-offset-x = "offset-x";
+    shadow-offset-y = "offset-y";
+  },
+  {
+    triggers = ["geometry"]
+    scale-x = {
+      curve = "cubic-bezier(0,0,0,1.2)";
+      duration = 0.3;
+      start = "window-width-before / window-width";
+      end = 1;
+    }
+    scale-y = {
+      curve = "cubic-bezier(0,0,0,1.2)";
+      duration = 0.3;
+      start = "window-height-before / window-height";
+      end = 1;
+    }
+    offset-x = {
+      curve = "cubic-bezier(0,0,0,1.2)";
+      duration = 0.3;
+      start = "window-x-before - window-x";
+      end = 0;
+    }
+    offset-y = {
+      curve = "cubic-bezier(0,0,0,1.2)";
+      duration = 0.3;
+      start = "window-y-before - window-y";
+      end = 0;
+    }
+
+    shadow-scale-x = "scale-x";
+    shadow-scale-y = "scale-y";
+    shadow-offset-x = "offset-x";
+    shadow-offset-y = "offset-y";
+  }
+)
