Applied tokyo night theme in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,7 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 17.0
+font_size 14.0
 window_padding_width 25
 include theme.conf
 background_opacity 0.60
@@ -14,5 +14,5 @@ confirm_os_window_close 0
 
 # BEGIN_KITTY_THEME
 # Tokyo Night
-include current-theme.conf
+include tokyo-night.conf
 # END_KITTY_THEME
