--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,10 @@ unbind C-b
 bind-key C-a send-prefix
 
 # Change default key bindings for splitting windows
-unbind %
-bind w split-window -h  
 unbind '"'
-bind-key s split-window -v 
+bind w split-window -h
+unbind %
+bind-key s split-window -v
 
 # Bind r to source the tmux configuration file
 unbind r
@@ -34,7 +34,7 @@ set-option -g status-position top
 # Bind m to toggle zoom for the active pane
 bind -r m resize-pane -Z
 
-# Enable mose support
+# Enable mouse support
 set -g mouse on
 
 # Use vi keys in copy mode
@@ -50,9 +50,9 @@ set -sg escape-time 10
 
 # tpm plugin manager setup
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'nikolovlazar/tokyo-night-tmux'
 
-# list of tmux plugins
+# List of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
@@ -61,24 +61,11 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
-# Apply Catppuccin theme configuartions
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+# SessionX settings for session management
+set -g @plugin 'tmux-plugins/tmux-sessionx'
+set -g @sessionx-session-dir "$HOME/.tmux/sessions"
+bind S command-prompt -p "Save session name:" "run 'tmux save-session \"%%\"'"
+bind L command-prompt -p "Load session name:" "run 'tmux load-session \"%%\"'"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "user host session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-
-#Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
