--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -24,7 +24,7 @@ primary = #00aaff
 secondary = #4c7899
 alert = #A54242
 disabled = #707880
-transparent = #FF00000
+transparent = #FF0000
 
 [bar/toph]
 monitor = ${env:MONITOR:}
@@ -37,7 +37,8 @@ dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-top = true
+; top = true
+bottom = true
 
 line-size = 0pt
 
@@ -51,10 +52,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetbrainsMono Nerd Font :size=14;2
+font-0 = JetbrainsMono Nerd Font :size=12;2
 
 modules-left = xworkspaces xwindow
-modules-right = cpu memory battery brightness pulseaudio  wlan eth bluetooth date
+modules-right = battery pulseaudio brightness cpu memory temperature wlan eth  date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -141,7 +142,7 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = "󰻠 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -186,11 +187,19 @@ inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
+[module/temperature]
+type = internal/temperature
+interval = 2
+thermal-zone = 0
+format-foreground = ${colors.primary}
+format-prefix = " "
+label = %temperature-c%
+
 [module/date]
 type = internal/date
 interval = 1
 
-date = %a %d-%b %y  %I:%M %p
+date = %a %d-%b %Y  %I:%M %p
 date-alt = %I:%M %p
 
 label = %date%
