--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,4 @@
-#font_family      MesloLGS Nerd Font Mono
-font_family      JetbrainsMono Nerd Font
+font_family      JetbrainsMono NF
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -11,8 +10,17 @@ background_opacity 0.60
 hide_window_decorations yes
 confirm_os_window_close 0
 
+# cursor_shape beam
 
-# BEGIN_KITTY_THEME
+remember_window_size  yes
+initial_window_width 720
+initial_window_height 330
+
+map ctrl+equal change_font_size all +1.0
+map ctrl+minus change_font_size all -1.0
+
+# background_image /home/ssk/Wallpaper-Bank/city-night-aerial-aerial-view-lights-traffic-building.jpg
+
+
 # Tokyo Night
 include tokyo-night.conf
-# END_KITTY_THEME
