--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,68 +4,61 @@
 # |____|__|__|__|_____|__.__|
 #
 
-# Set the terminal to 256 colors
-set -g default-terminal "screen-256color"
+set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'aserowy/tmux.nvim'
+set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Change default prefix to ctrl-a
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-# Change default key bindings for splitting windows
-unbind '"'
-bind w split-window -h
-unbind %
-bind-key s split-window -v
+set -g @sessionx-bind 'space'
 
-# Bind r to source the tmux configuration file
-unbind r
-bind r source-file ~/.tmux.conf
+# Setup tmux theme
+set -g @tokyo-night-tmux_window_id_style fsquare
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-# Set keys to resize pane
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
+# Toggle tmux status bar
+bind '\' set status
+if-shell "[[ $(tmux lsw | wc -l) -le 1 ]]" 'set -g status'
+
+set -g status on
 
 # Position tmux status bar at top of screen
 set-option -g status-position top
 
-# Bind m to toggle zoom for the active pane
-bind -r m resize-pane -Z
-
-# Enable mouse support
+# Enable mouse
 set -g mouse on
 
-# Use vi keys in copy mode
-set-window-option -g mode-keys vi
+# Increase history limit
+set -g history-limit 30000
 
-# Bind vi keys for copy mode
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+# Start windows and panes at 1 and not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-# Reduce delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
+# Zero-out escape time delay for quicker response
+set -s escape-time 0
 
-# tpm plugin manager setup
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+# keybindings
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-# List of tmux plugins
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+# Open the new panes in the current path
+bind s split-window -v -c "#{pane_current_path}"
+bind w split-window -h -c "#{pane_current_path}"
 
-# Plugin settings
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
-
-# SessionX settings for session management
-set -g @plugin 'tmux-plugins/tmux-sessionx'
-set -g @sessionx-session-dir "$HOME/.tmux/sessions"
-bind S command-prompt -p "Save session name:" "run 'tmux save-session \"%%\"'"
-bind L command-prompt -p "Load session name:" "run 'tmux load-session \"%%\"'"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# If this is your first time using tmux, you will need to press (Ctrl + Space) + I to fetch the plugins.
 run '~/.tmux/plugins/tpm/tpm'
+
