Added new colorscheme 'cyberdream'

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ bold_italic_font auto
 font_size 14.0
 window_padding_width 25
 include theme.conf
-background_opacity 0.60
+background_opacity 0.6
 hide_window_decorations yes
 confirm_os_window_close 0
 
@@ -23,4 +23,4 @@ map ctrl+minus change_font_size all -1.0
 
 
 # Tokyo Night
-include tokyo-night.conf
+include cyberdream.conf
