--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,19 +17,30 @@
 ;==========================================================
 
 [colors]
-background = #99000000
-background-alt = #373B41
-foreground = #ffffff
-primary = #00aaff
-secondary = #4c7899
-alert = #A54242
-disabled = #707880
-transparent = #FF0000
+background = #0d0f20    
+background-alt = #1b1e34 
+foreground = #e4f0fb 
+primary = #00d9ff     
+secondary = #ff4dff    
+alert = #ff6161         
+disabled = #4e505c       
+transparent = #00000000   
+label = #ffc600            
+; background = #2e3440       
+; background-alt = #3b4252 
+; foreground = #d8dee9    
+; primary = #88c0d0      
+; secondary = #81a1c1   
+; alert = #bf616a     
+; disabled = #4c566a 
+; transparent = #00000000    
+; label = #ebcb8b           
+
 
 [bar/toph]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 22pt
+height = 20pt
 radius = 0
 
 dpi = 96
@@ -37,8 +48,8 @@ dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-; top = true
-bottom = true
+top = true
+; bottom = true
 
 line-size = 0pt
 
@@ -52,7 +63,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetbrainsMono Nerd Font :size=12;2
+font-0 = JetbrainsMono Nerd Font :size=14;2
 
 modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio brightness cpu memory temperature wlan eth  date
@@ -158,7 +169,7 @@ animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-framerate = 750
-animation-charging-foreground = #F0C674
+animation-charging-foreground = ${colors.label}
 format-discharging = <ramp-capacity> <label-discharging>
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -203,7 +214,7 @@ date = %a %d-%b %Y  %I:%M %p
 date-alt = %I:%M %p
 
 label = %date%
-label-foreground = #F0C674
+label-foreground = ${colors.label}
 
 [module/brightness]
 type = internal/backlight
