--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,6 @@
 
 set -g @plugin 'nikolovlazar/tokyo-night-tmux'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'aserowy/tmux.nvim'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -16,6 +15,9 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# Plugin settings
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 set -g @sessionx-bind 'space'
 
 # Setup tmux theme
@@ -23,19 +25,22 @@ set -g @tokyo-night-tmux_window_id_style fsquare
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-# Undercurl
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+# # Undercurl
+# set -g default-terminal "${TERM}"
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # Toggle tmux status bar
-bind '\' set status
-if-shell "[[ $(tmux lsw | wc -l) -le 1 ]]" 'set -g status'
+# bind '\' set status
+# if-shell "[[ $(tmux lsw | wc -l) -le 1 ]]" 'set -g status'
 
 set -g status on
 
 # Position tmux status bar at top of screen
 set-option -g status-position top
+
+# Reduce delay for exiting insert mode with ESC in Neovim
+set -sg escape-time 10
 
 # Enable mouse
 set -g mouse on
