temux config update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,20 +4,22 @@
 # |____|__|__|__|_____|__.__|
 #
 
-set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+# Color
+set -g default-terminal "screen-256color"
+
+# Plugins 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'aserowy/tmux.nvim'
-set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+set -g @plugin 'omerxx/tmux-sessionx'
 
 # Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+set -g @continuum-restore 'off'
+
 set -g @sessionx-bind 'space'
 
 # Setup tmux theme
@@ -25,22 +27,22 @@ set -g @tokyo-night-tmux_window_id_style fsquare
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
 
-# # Undercurl
-# set -g default-terminal "${TERM}"
-# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # Toggle tmux status bar
-# bind '\' set status
-# if-shell "[[ $(tmux lsw | wc -l) -le 1 ]]" 'set -g status'
+bind '\' set status
+if-shell "[[ $(tmux lsw | wc -l) -le 1 ]]" 'set -g status'
 
-set -g status on
 
 # Position tmux status bar at top of screen
 set-option -g status-position top
 
-# Reduce delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
+bind -r m resize-pane -Z
+
+set -g status on
 
 # Enable mouse
 set -g mouse on
@@ -54,16 +56,33 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Zero-out escape time delay for quicker response
-set -s escape-time 0
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+
+# Remove delay for exiting insert mode with ESC in Neovim
+set -sg escape-time 10
 
 # keybindings
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
+# Set keys to change window pane
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+
+bind-key -T copy-mode-vi M-h resize-pane -L 1
+bind-key -T copy-mode-vi M-j resize-pane -D 1
+bind-key -T copy-mode-vi M-k resize-pane -U 1
+bind-key -T copy-mode-vi M-l resize-pane -R 1
+
 # Open the new panes in the current path
-bind s split-window -v -c "#{pane_current_path}"
 bind w split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 
 # If this is your first time using tmux, you will need to press (Ctrl + Space) + I to fetch the plugins.
 run '~/.tmux/plugins/tpm/tpm'
-
